am rezolvat cu hover

--- a/src/Components/GMaps.css
+++ b/src/Components/GMaps.css
@@ -49,9 +49,16 @@
     background-color:#cb2d40 ;
 
 }
+.removeYellow-marker:hover{
+    background-color:#cb2d40 ;
+
+}
 .transform-marker:hover{
     background-color:#cb2d40 ;
 
+}
+.forSure-marker:hover{
+    background-color:#cb2d40 ;
 }
 .transform-marker
 {
