--- a/src/Components/GMaps.css
+++ b/src/Components/GMaps.css
@@ -27,7 +27,7 @@
     letter-spacing: 2.5px;
     font-weight: 700;
     color: white;
-    background-color:#23c7ac;
+    background-color: #2b5876;
     border: none;
     border-radius: 45px;
     box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.1);
@@ -70,7 +70,7 @@
     letter-spacing: 2.5px;
     font-weight: 700;
     color: white;
-    background-color:#23c7ac;
+    background-color: #2b5876;
     border: none;
     border-radius: 45px;
     box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.1);
@@ -84,8 +84,8 @@
 .forSure-marker
 {
     position: relative;
-    left :22%;
-    width: 107px;
+
+    width: 110px;
     height: 25px;
     font-family: 'Manrope', sans-serif;
     font-size: 11px;
@@ -93,7 +93,7 @@
     letter-spacing: 2.5px;
     font-weight: 700;
     color: white;
-    background-color:#23c7ac;
+    background-color: #2b5876;
     border: none;
     border-radius: 45px;
     box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.1);
@@ -106,8 +106,8 @@
 .removeBlue-marker
 {
     position: relative;
-    left :20%;
-    width: 107px;
+
+    width: 110px;
     height: 25px;
     font-family: 'Manrope', sans-serif;
     font-size: 11px;
@@ -115,7 +115,7 @@
     letter-spacing: 2.5px;
     font-weight: 700;
     color: white;
-    background-color:#23c7ac;
+    background-color: #2b5876;
     border: none;
     border-radius: 45px;
     box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.1);
@@ -128,8 +128,8 @@
 .removeGrey-marker
 {
     position: relative;
-    left :22%;
-    width: 107px;
+
+    width: 110px;
     height: 25px;
     font-family: 'Manrope', sans-serif;
     font-size: 11px;
@@ -137,7 +137,7 @@
     letter-spacing: 2.5px;
     font-weight: 700;
     color: white;
-    background-color:#23c7ac;
+    background-color: #2b5876;
     border: none;
     border-radius: 45px;
     box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.1);
@@ -151,8 +151,8 @@
 .removeYellow-marker
 {
     position: relative;
-    left :22%;
-    width: 107px;
+
+    width: 110px;
     height: 25px;
     font-family: 'Manrope', sans-serif;
     font-size: 11px;
@@ -160,7 +160,7 @@
     letter-spacing: 2.5px;
     font-weight: 700;
     color: white;
-    background-color:#23c7ac;
+    background-color: #2b5876;
     border: none;
     border-radius: 45px;
     box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.1);
