--- a/src/Components/Volunteers.css
+++ b/src/Components/Volunteers.css
@@ -4,6 +4,7 @@
     position: fixed;
     bottom: 0;
     right: 0;
+    left:0;
 }
 
 .table
@@ -11,7 +12,8 @@
     position:fixed;
     bottom: 0;
     right: 0;
+    left:0;
     top:0;
-    width: 89.6%;
+
 }
 
