--- a/src/Components/GMaps.css
+++ b/src/Components/GMaps.css
@@ -172,13 +172,14 @@
 }
 .checkbox1{
     height:auto;
-    width: 160px;
+    width: 152px;
     position: fixed;
     z-index: 1;
-    top: 0;
-    right: 0;
+    /*top: 0;
+    right: 0;*/
     background-color: #2b313d;
-    overflow-x: hidden;
-    padding-top: 20px;
+    box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    padding: 7px 4px;
 }
 
