--- a/src/Components/Volunteers/Volunteers.css
+++ b/src/Components/Volunteers/Volunteers.css
@@ -16,4 +16,19 @@
     top:0;
 
 }
+.button
+{
+    background-color: #2b313d;
+    width: 50%;
+    padding-bottom: 7px;
+    padding-top: 7px;
+    transition: all 0.3s ease 0s;
+    color: white;
+}
 
+
+.button:hover
+{
+    background-color: #1fb299 ;
+
+}
