--- a/src/Components/Volunteers/Volunteers.css
+++ b/src/Components/Volunteers/Volunteers.css
@@ -2,7 +2,7 @@
 .page-switcher
 {
     position: fixed;
-    bottom: 0;
+    bottom: 0px;
     right: 0;
     left:0;
 }
@@ -10,10 +10,11 @@
 .table
 {
     position:fixed;
-    bottom: 0;
+    bottom:0px;
     right: 0;
     left:150px;
-    top:0;
+    top:0px;
+    color: white;
 
 }
 .button
